WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310739
[WPE] imported/w3c/web-platform-tests/editing/other/copy-elements-with-css-vars.tentative.html is a flaky crash
https://bugs.webkit.org/show_bug.cgi?id=310739
Summary
[WPE] imported/w3c/web-platform-tests/editing/other/copy-elements-with-css-va...
Nikolas Zimmermann
Reported
2026-03-25 15:59:26 PDT
309900@main
UNKNOWN
309901@main
TEXT CRASH (Expected: PASS)
309902@main
UNKNOWN
309903@main
TEXT CRASH (Expected: PASS) [
309904@main-309906@main
] UNKNOWN [
309907@main-309908@main
] CRASH (Expected: PASS) [
309909@main-309911@main
] UNKNOWN
309912@main
CRASH (Expected: PASS)
309913@main
TEXT CRASH (Expected: PASS)
309914@main
CRASH (Expected: PASS) [
309915@main-309917@main
] UNKNOWN
309918@main
CRASH (Expected: PASS) [
309919@main-309921@main
] UNKNOWN
309922@main
CRASH (Expected: PASS) The bot wpe-release completed 1456 runs on the interval [
305922@main-309922@main
] Frequency of results for test: imported/w3c/web-platform-tests/editing/other/copy-elements-with-css-vars.tentative.html 1445 times [99.2%] -> NOERROR 4 times [0.3%] -> TEXT CRASH 7 times [0.5%] -> CRASH Of those 1456 runs it didn't match the expectation 11 times [0.8%] Details of the type and frequency of unmatched expectations: 4 times [0.3%] -> TEXT CRASH (Expected: PASS) 7 times [0.5%] -> CRASH (Expected: PASS) Flakiness factor: 0.5% - This test was flaky on 0.5% of the 1456 runs analyzed, either giving different results within a single run, or a different result than in the previous run.
Attachments
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2026-04-17 00:35:28 PDT
https://build.webkit.org/results/WPE-Linux-64-bit-Release-Tests/311425@main%20(26695)/imported/w3c/web-platform-tests/editing/other/copy-elements-with-css-vars.tentative-crash-log.txt
Thread 1 (Thread 0x7fa99487bac0 (LWP 1570505)): #0 g_logv (log_domain=0x7fa9a742200e "GLib", log_level=G_LOG_LEVEL_CRITICAL, format=<optimized out>, args=args@entry=0x7ffd4437b370) at ../../../../../jhbuild/checkout/glib/glib/gmessages.c:1277 #1 0x00007fa9a73cad73 in g_log (log_domain=log_domain@entry=0x7fa9a742200e "GLib", log_level=log_level@entry=G_LOG_LEVEL_CRITICAL, format=format@entry=0x7fa9a742408e "%s: assertion '%s' failed") at ../../../../../jhbuild/checkout/glib/glib/gmessages.c:1315 #2 0x00007fa9a73cbd7d in g_return_if_fail_warning (log_domain=log_domain@entry=0x7fa9a742200e "GLib", pretty_function=pretty_function@entry=0x7fa9a74391d8 <__func__.7> "g_strv_length", expression=expression@entry=0x7fa9a7424ca3 "str_array != NULL") at ../../../../../jhbuild/checkout/glib/glib/gmessages.c:3000 #3 0x00007fa9a73e723e in g_strv_length (str_array=0x0) at ../../../../../jhbuild/checkout/glib/glib/gstrfuncs.c:2988 #4 g_strv_length (str_array=<optimized out>) at ../../../../../jhbuild/checkout/glib/glib/gstrfuncs.c:2984 #5 0x00007fa9a0dbc896 in WebKit::clipboardFormats(_WPEClipboard*) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #6 0x00007fa9a0dbe9d5 in WebKit::WebPasteboardProxy::getTypes(WTF::String const&, WTF::CompletionHandler<void (WTF::Vector<WTF::String, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>&&)>&&) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #7 0x00007fa9a047dab2 in void IPC::handleMessageSynchronous<Messages::WebPasteboardProxy::GetTypes, WebKit::WebPasteboardProxy, WebKit::WebPasteboardProxy, void (WTF::String const&, WTF::CompletionHandler<void (WTF::Vector<WTF::String, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>&&)>&&)>(IPC::Connection&, IPC::Decoder&, WTF::UniqueRef<IPC::Encoder>&, WebKit::WebPasteboardProxy*, void (WebKit::WebPasteboardProxy::*)(WTF::String const&, WTF::CompletionHandler<void (WTF::Vector<WTF::String, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>&&)>&&)) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #8 0x00007fa9a09d09d4 in IPC::MessageReceiverMap::dispatchSyncMessage(IPC::Connection&, IPC::Decoder&, WTF::UniqueRef<IPC::Encoder>&) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #9 0x00007fa9a0b78250 in WebKit::WebProcessProxy::dispatchSyncMessage(IPC::Connection&, IPC::Decoder&, WTF::UniqueRef<IPC::Encoder>&) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #10 0x00007fa9a048760c in WebKit::WebProcessProxy::didReceiveSyncMessage(IPC::Connection&, IPC::Decoder&, WTF::UniqueRef<IPC::Encoder>&) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #11 0x00007fa9a09c8df0 in IPC::Connection::dispatchSyncMessage(IPC::Decoder&) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #12 0x00007fa9a09c90ed in IPC::Connection::dispatchMessage(WTF::UniqueRef<IPC::Decoder>) [clone .part.0] () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #13 0x00007fa9a09cae08 in IPC::Connection::SyncMessageState::dispatchMessages(WTF::Function<void (IPC::MessageName, unsigned long)>&&) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #14 0x00007fa9a09cbcd5 in IPC::Connection::waitForSyncReply(WTF::ObjectIdentifierGeneric<IPC::SyncRequestIDType, WTF::ObjectIdentifierThreadSafeAccessTraits<unsigned long>, unsigned long>, IPC::MessageName, IPC::Timeout, WTF::OptionSet<IPC::SendSyncOption, (WTF::ConcurrencyTag)0>) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #15 0x00007fa9a09cc200 in IPC::Connection::sendSyncMessage(WTF::ObjectIdentifierGeneric<IPC::SyncRequestIDType, WTF::ObjectIdentifierThreadSafeAccessTraits<unsigned long>, unsigned long>, WTF::UniqueRef<IPC::Encoder>&&, IPC::Timeout, WTF::OptionSet<IPC::SendSyncOption, (WTF::ConcurrencyTag)0>) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #16 0x00007fa9a09c8878 in IPC::Connection::sendMessageImpl(WTF::UniqueRef<IPC::Encoder>&&, WTF::OptionSet<IPC::SendOption, (WTF::ConcurrencyTag)0>, std::optional<WTF::Thread::QOS>) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #17 0x00007fa9a0a543d2 in WebKit::AuxiliaryProcessProxy::sendMessage(WTF::UniqueRef<IPC::Encoder>&&, WTF::OptionSet<IPC::SendOption, (WTF::ConcurrencyTag)0>, std::optional<IPC::ConnectionAsyncReplyHandler>, WebKit::AuxiliaryProcessProxy::ShouldStartProcessThrottlerActivity) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #18 0x00007fa9a0ada883 in bool WebKit::AuxiliaryProcessProxy::send<Messages::WebPage::KeyEvent>(Messages::WebPage::KeyEvent&&, unsigned long, WTF::OptionSet<IPC::SendOption, (WTF::ConcurrencyTag)0>) [clone .isra.0] () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #19 0x00007fa9a0af1663 in WebKit::WebPageProxy::sendKeyEvent(WebKit::NativeWebKeyboardEvent const&) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #20 0x00007fa9a0b2c2ab in WebKit::WebPageProxy::handleKeyboardEvent(WebKit::NativeWebKeyboardEvent const&) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #21 0x00007fa9a0c92289 in WKWPE::ViewPlatform::handleEvent(_WPEEvent*) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #22 0x00007fa9a71edb16 in ?? () from /lib/x86_64-linux-gnu/libffi.so.8 #23 0x00007fa9a71ea3ef in ?? () from /lib/x86_64-linux-gnu/libffi.so.8 #24 0x00007fa9a71ed0be in ffi_call () from /lib/x86_64-linux-gnu/libffi.so.8 #25 0x00007fa9a729cb92 in g_cclosure_marshal_generic (closure=<optimized out>, return_gvalue=<optimized out>, n_param_values=<optimized out>, param_values=<optimized out>, invocation_hint=<optimized out>, marshal_data=<optimized out>) at ../../../../../jhbuild/checkout/glib/gobject/gclosure.c:1537 #26 0x00007fa9a729c120 in g_closure_invoke (closure=0x560f35c4cec0, return_value=0x7ffd4437c130, n_param_values=2, param_values=0x7ffd4437c1c0, invocation_hint=0x7ffd4437c110) at ../../../../../jhbuild/checkout/glib/gobject/gclosure.c:833 #27 0x00007fa9a72b1449 in signal_emit_unlocked_R (node=node@entry=0x7ffd4437c290, detail=detail@entry=0, instance=instance@entry=0x560f35c1cc50, emission_return=emission_return@entry=0x7ffd4437c310, instance_and_params=instance_and_params@entry=0x7ffd4437c1c0) at ../../../../../jhbuild/checkout/glib/gobject/gsignal.c:3960 #28 0x00007fa9a72b2321 in signal_emit_valist_unlocked (instance=instance@entry=0x560f35c1cc50, signal_id=signal_id@entry=10, detail=detail@entry=0, var_args=var_args@entry=0x7ffd4437c3f0) at ../../../../../jhbuild/checkout/glib/gobject/gsignal.c:3532 #29 0x00007fa9a72b8816 in g_signal_emit_valist (instance=0x560f35c1cc50, signal_id=10, detail=0, var_args=0x7ffd4437c3f0) at ../../../../../jhbuild/checkout/glib/gobject/gsignal.c:3262 #30 0x00007fa9a72b88d3 in g_signal_emit (instance=<optimized out>, signal_id=<optimized out>, detail=<optimized out>) at ../../../../../jhbuild/checkout/glib/gobject/gsignal.c:3582 #31 0x00007fa9a02d02fa in wpe_view_event () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #32 0x0000560f1c615332 in WTR::EventSenderProxyClientWPE::rawKeyDown(OpaqueWKString const*, unsigned int, unsigned int) () #33 0x0000560f1c5f1ba0 in WTR::TestController::didReceiveSynchronousMessageFromInjectedBundle(OpaqueWKString const*, void const*, OpaqueWKMessageListener const*) () #34 0x00007fa9a0ae8194 in WebKit::WebPageInjectedBundleClient::didReceiveSynchronousMessageFromInjectedBundle(WebKit::WebPageProxy*, WTF::String const&, API::Object*, WTF::CompletionHandler<void (WTF::RefPtr<API::Object, WTF::RawPtrTraits<API::Object>, WTF::DefaultRefDerefTraits<API::Object> >)>&&) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #35 0x00007fa9a0aee1b7 in WebKit::WebPageProxy::handleSynchronousMessage(IPC::Connection&, WTF::String const&, WebKit::UserData const&, WTF::CompletionHandler<void (WebKit::UserData&&)>&&) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #36 0x00007fa9a046025d in void IPC::handleMessageSynchronous<Messages::WebPageProxy::HandleSynchronousMessage, WebKit::WebPageProxy, WebKit::WebPageProxy, void (IPC::Connection&, WTF::String const&, WebKit::UserData const&, WTF::CompletionHandler<void (WebKit::UserData&&)>&&)>(IPC::Connection&, IPC::Decoder&, WTF::UniqueRef<IPC::Encoder>&, WebKit::WebPageProxy*, void (WebKit::WebPageProxy::*)(IPC::Connection&, WTF::String const&, WebKit::UserData const&, WTF::CompletionHandler<void (WebKit::UserData&&)>&&)) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #37 0x00007fa9a046b48b in WebKit::WebPageProxy::didReceiveSyncMessage(IPC::Connection&, IPC::Decoder&, WTF::UniqueRef<IPC::Encoder>&) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #38 0x00007fa9a09d09d4 in IPC::MessageReceiverMap::dispatchSyncMessage(IPC::Connection&, IPC::Decoder&, WTF::UniqueRef<IPC::Encoder>&) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #39 0x00007fa9a0b78250 in WebKit::WebProcessProxy::dispatchSyncMessage(IPC::Connection&, IPC::Decoder&, WTF::UniqueRef<IPC::Encoder>&) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #40 0x00007fa9a048760c in WebKit::WebProcessProxy::didReceiveSyncMessage(IPC::Connection&, IPC::Decoder&, WTF::UniqueRef<IPC::Encoder>&) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #41 0x00007fa9a09c8df0 in IPC::Connection::dispatchSyncMessage(IPC::Decoder&) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #42 0x00007fa9a09c90ed in IPC::Connection::dispatchMessage(WTF::UniqueRef<IPC::Decoder>) [clone .part.0] () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #43 0x00007fa9a09ca500 in IPC::Connection::SyncMessageState::dispatchMessagesAndResetDidScheduleDispatchMessagesForConnection(IPC::Connection&) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #44 0x00007fa9a09ca9dd in WTF::Detail::CallableWrapper<IPC::Connection::SyncMessageState::processIncomingMessage(IPC::Connection&, WTF::UniqueRef<IPC::Decoder>&)::{lambda()#1}, void>::call() () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #45 0x00007fa9a2eec2a9 in WTF::RunLoop::performWork() () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #46 0x00007fa9a2fd3b0d in WTF::RunLoop::RunLoop()::{lambda(void*)#1}::_FUN(void*) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #47 0x00007fa9a2fd75ad in WTF::RunLoop::{lambda(_GSource*, int (*)(void*), void*)#1}::_FUN(_GSource*, int (*)(void*), void*) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #48 0x00007fa9a73bff7f in g_main_dispatch (context=context@entry=0x560f35b40e20) at ../../../../../jhbuild/checkout/glib/glib/gmain.c:3357 #49 0x00007fa9a73c208f in g_main_context_dispatch_unlocked (context=0x560f35b40e20) at ../../../../../jhbuild/checkout/glib/glib/gmain.c:4208 #50 g_main_context_iterate_unlocked (context=context@entry=0x560f35b40e20, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../../../../../jhbuild/checkout/glib/glib/gmain.c:4273 #51 0x00007fa9a73c27a0 in g_main_context_iteration (context=0x560f35b40e20, may_block=1) at ../../../../../jhbuild/checkout/glib/glib/gmain.c:4338 #52 0x0000560f1c615e7d in WTR::TestController::platformRunUntil(bool&, WTF::Seconds) () #53 0x0000560f1c5fc0e4 in WTR::TestInvocation::invoke() () #54 0x0000560f1c5ec66f in WTR::TestController::runTest(char const*) () #55 0x0000560f1c5eca9d in WTR::TestController::runTestingServerLoop() () #56 0x0000560f1c5ed216 in WTR::TestController::TestController(int, char const**) () #57 0x0000560f1c617bb6 in main ()
Fujii Hironori
Comment 2
2026-04-17 00:35:43 PDT
History:
https://results.webkit.org/?platform=GTK&platform=WPE&suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fediting%2Fother%2Fcopy-elements-with-css-vars.tentative.html
Fujii Hironori
Comment 3
2026-04-19 18:12:42 PDT
Although crash has happened after
309896@main
, This is a regression of
306624@main
.
309428@main
added the test case.
Fujii Hironori
Comment 4
2026-04-19 18:28:18 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/63085
EWS
Comment 5
2026-04-20 00:48:49 PDT
Committed
311564@main
(5a7b2c171b5d): <
https://commits.webkit.org/311564@main
> Reviewed commits have been landed. Closing PR #63085 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug