REGRESSION(306624@main) [WPE] Null check the return value of wpe_clipboard_get_formats https://bugs.webkit.org/show_bug.cgi?id=310739

Reviewed by Carlos Garcia Campos.

imported/w3c/web-platform-tests/editing/other/copy-elements-with-css-vars.tentative.html
was a flaky crash.

306624@main introduced WTF::span for the return value of wpe_clipboard_get_formats()
in WebPasteboardProxyWPE.cpp. However, it needs a null check.

* LayoutTests/platform/wpe/TestExpectations:
* LayoutTests/platform/wpe/imported/w3c/web-platform-tests/editing/other/copy-elements-with-css-vars.tentative-expected.txt:
* Source/WebKit/UIProcess/wpe/WebPasteboardProxyWPE.cpp:
(WebKit::clipboardFormats):
(WebKit::WebPasteboardProxy::typesSafeForDOMToReadAndWrite):

Canonical link: https://commits.webkit.org/311564@main