Source/WebKit/UIProcess/wpe/WebPasteboardProxyWPE.cpp
@@ -47,7 +47,10 @@ using namespace WebCore;
 #if ENABLE(WPE_PLATFORM)
 static Vector<String> clipboardFormats(WPEClipboard* clipboard)
 {
-    const auto formats = span(wpe_clipboard_get_formats(clipboard));
+    auto* strv = wpe_clipboard_get_formats(clipboard);
+    if (!strv)
+        return { };
+    const auto formats = span(strv);
     return Vector<String>(formats.size(), [&formats](size_t index) {
         return String::fromUTF8(formats[index]);
     });
@@ -167,13 +170,15 @@ void WebPasteboardProxy::typesSafeForDOMToReadAndWrite(IPC::Connection&, const S
                     domTypes.add(type);
             }
 
-            for (const char* format : span(wpe_clipboard_get_formats(clipboard))) {
-                String formatString = String::fromUTF8(format);
-                if (formatString == PasteboardCustomData::wpeType())
-                    continue;
+            if (auto* strv = wpe_clipboard_get_formats(clipboard)) {
+                for (const char* format : span(strv)) {
+                    String formatString = String::fromUTF8(format);
+                    if (formatString == PasteboardCustomData::wpeType())
+                        continue;
 
-                if (Pasteboard::isSafeTypeForDOMToReadAndWrite(formatString))
-                    domTypes.add(formatString);
+                    if (Pasteboard::isSafeTypeForDOMToReadAndWrite(formatString))
+                        domTypes.add(formatString);
+                }
             }
             completionHandler(copyToVector(domTypes));
             return;
